<resources>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_0_00">0.00</string>
    <string name="a_osm_tiles_url">http://a-osm-tiles-ru.ligataxi.com/</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="accept">Принять</string>
    <string name="accept_order">Принять заказ</string>
    <string name="accept_pre_order">Принять предзаказ</string>
    <string name="access_fine_location_permission_required">Для работы приложения необходимо разрешение на доступ к местоположению.</string>
    <string name="action_confirm">Подтверждение действий</string>
    <string name="action_confirm_off">Подтверждение действий при выполнении заказа выключено</string>
    <string name="action_confirm_on">Подтверждение действий при выполнении заказа включено</string>
    <string name="action_not_allowed">Данное действие не разрешено</string>
    <string name="add_client_info_button">Кнопка внесения информации о клиенте</string>
    <string name="add_client_info_message">Пожалуйста укажите контактную информацию о клиенте</string>
    <string name="add_order_extras">Добавить опции заказа</string>
    <string name="add_payment">+Оплата</string>
    <string name="address">Адрес</string>
    <string name="all_newsletters">Все новости</string>
    <string name="already_authentificated">Уже выполнен вход с другого устройства</string>
    <string name="and">И</string>
    <string name="animals">Перевоз животных</string>
    <string name="answer">Ответ</string>
    <string name="app_forbidden">Для работы c приложением необходимо удалить &lt;b>%s&lt;/b></string>
    <string name="app_name">21 ВЕК Водитель</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_empty">Архив пуст</string>
    <string name="are_you_shure">Вы уверены?</string>
    <string name="arrived">На месте</string>
    <string name="assigned_another_driver">Снят диспетчером</string>
    <string name="authLinkTitle" />
    <string name="authLinkUrl" />
    <string name="auto">Автомобиль</string>
    <string name="auto_accept">Автовзятие</string>
    <string name="auto_accept_disabled">Автовзятие отключено</string>
    <string name="auto_accept_enabled">Автовзятие включено</string>
    <string name="auto_brand">Марка</string>
    <string name="auto_class">Класс</string>
    <string name="auto_color">Цвет</string>
    <string name="auto_number">Номер</string>
    <string name="b_osm_tiles_url">http://b-osm-tiles-ru.ligataxi.com/</string>
    <string name="background_location_permission_request_message">Это приложение использует данные о местоположении чтобы позволить предлагать Вам наиболее подходящие заказы, корректно формировать маршрут выполнения заказа, а также максимально точно определять его стоимость, даже когда приложение свернуто. Приложение не использует данные о местоположении, когда оно отключено от сервера, а также в целях, отличающихся от описанных выше. Данные о местоположении не используются в маркетинговых целях. Если Вы откажитесь от предоставления данного разрешения - наша программа не сможет предлагать Вам наиболее подходящие заказы.</string>
    <string name="balance">Баланс</string>
    <string name="banned">Заблокирован</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="begin_to_proceed">Приступить</string>
    <string name="bill">Выдать чек</string>
    <string name="bing">Bing</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_close_registration">ЗАКРЫТЬ</string>
    <string name="button_further">ДАЛЕЕ</string>
    <string name="c_osm_tiles_url">http://c-osm-tiles-ru.ligataxi.com/</string>
    <string name="calc_wait_time_from" />
    <string name="calculate_on_the_roads">По карте</string>
    <string name="call_phone_permission_required">Для работы данной функции необходимо разрешение на телефон.</string>
    <string name="call_sign">Позывной</string>
    <string name="call_sign_in_danger">-й в опасности</string>
    <string name="call_to_client">Соединить с клиентом</string>
    <string name="call_to_client_soon">В ближайшее время Вас соединят с клиентом</string>
    <string name="call_to_dispatcher_button_description">Кнопка вызова диспетчера</string>
    <string name="callsign">Callsign</string>
    <string name="cameraview_default_autofocus_marker">com.otaliastudios.cameraview.markers.DefaultAutoFocusMarker</string>
    <string name="cameraview_filter_autofix">com.otaliastudios.cameraview.filters.AutoFixFilter</string>
    <string name="cameraview_filter_black_and_white">com.otaliastudios.cameraview.filters.BlackAndWhiteFilter</string>
    <string name="cameraview_filter_brightness">com.otaliastudios.cameraview.filters.BrightnessFilter</string>
    <string name="cameraview_filter_contrast">com.otaliastudios.cameraview.filters.ContrastFilter</string>
    <string name="city">Город</string>
    <string name="company_logo">company logo</string>
    <string name="danger">SOS</string>
    <string name="default_navigator">Yandex</string>
    <string name="destination_parking">Зона назначения</string>
    <string name="done">Выполнен</string>
    <string name="driver">Водитель</string>
    <string name="driver_earnings">Заработок</string>
    <string name="driver_in_danger">Водитель в опасности</string>
    <string name="driver_info">Карточка водителя</string>
    <string name="driver_parkings">Дублирование стоянок</string>
    <string name="driver_parkings_off">Дублирование стоянок в начале списка, на которых отмечен водитель, выключено</string>
    <string name="driver_parkings_on">Дублирование стоянок в начале списка, на которых отмечен водитель, включено</string>
    <string name="driver_statistic">Выполнено заказов</string>
    <string name="error_connection_failed">Не удалось подключиться к серверу.</string>
    <string name="filters_enabled">Фильтр включен</string>
    <string name="five_seconds">5 сек</string>
    <string name="hide_notifications">Не показывать уведомления</string>
    <string name="illegitimate_order">Свои пассажиры</string>
    <string name="last_30_days">30 дней</string>
    <string name="last_month">Прошлый месяц</string>
    <string name="lifetime_notifications_for_order_title">Время отображения уведомления</string>
    <string name="light">Светлая</string>
    <string name="live_now">Эфир</string>
    <string name="map">Карта</string>
    <string name="map_visibility">Отображение карты</string>
    <string name="map_visibility_off">Отображение карты при принятии заказа отключено</string>
    <string name="map_visibility_on">Отображение карты при принятии заказа включено</string>
    <string name="max_notifications_for_order">Укажите максимальное кол-во уведомлений для одного заказа</string>
    <string name="max_notifications_for_order_title">Кол-во уведомлений</string>
    <string name="menu_button_description">Кнопка меню</string>
    <string name="message_to_dispatcher">Сообщение диспетчеру</string>
    <string name="minimum_price">Минимальная цена</string>
    <string name="month">Текущий месяц</string>
    <string name="name">Имя</string>
    <string name="navigator">Навигатор</string>
    <string name="newsletters">Новости</string>
    <string name="none_price">Без цены</string>
    <string name="notification">Уведомление</string>
    <string name="notification_toast">Простое уведомление</string>
    <string name="notification_type">Выберите способ отображения уведомления</string>
    <string name="notification_type_title">Тип уведомления</string>
    <string name="on_route">По маршруту</string>
    <string name="osm">OpenStreetMap</string>
    <string name="parking_notification_off">Уведомление о перемещениях выключено</string>
    <string name="parking_notification_on">Уведомление о перемещениях включено</string>
    <string name="parkings">Стоянки</string>
    <string name="pause_notifications_for_order_title">Пауза между уведомлениями</string>
    <string name="personal_order">Личный заказ</string>
    <string name="phone_number">Телефон</string>
    <string name="push_notification">Push уведомления</string>
    <string name="radius">Радиус</string>
    <string name="rating">Рейтинг</string>
    <string name="rating_position">Позиция в рейтинге</string>
    <string name="retry_connect">Повторить попытку</string>
    <string name="save">Сохранить</string>
    <string name="session">Смена</string>
    <string name="set_application_theme">Установите тему оформления</string>
    <string name="set_map_provider">Выберите поставщика карт</string>
    <string name="set_navigator">Укажите предпочитаемый навигатор</string>
    <string name="set_notification_sound">Установите мелодию для уведомления</string>
    <string name="settings">Настройки</string>
    <string name="show_all_notifications">Показывать уведомление каждый раз</string>
    <string name="show_none_price_orders">Отображать заказы без цены</string>
    <string name="start_performing">Приступить к выполнению</string>
    <string name="step_nine_auth_pass">Ваш пароль: %1$d</string>
    <string name="step_nine_driver_id">Ваш позывной: %1$d</string>
    <string name="step_nine_hint">Регистрация завершена</string>
    <string name="store">Магазин</string>
    <string name="take_a_break">Взять перерыв</string>
    <string name="take_client">Принял клиента</string>
    <string name="taxi_service">Служба такси</string>
    <string name="taximeter">Таксометр</string>
    <string name="theme">Тема</string>
    <string name="vibrate">Вибросигнал</string>
    <string name="vibrate_off">Вибрация выключена</string>
    <string name="vibrate_on">Вибрация включена</string>
    <string name="week">Неделя</string>
</resources>