<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/logo_imageView" android:layout_width="200.0dp" android:layout_height="200.0dp" android:src="@drawable/ic_taxi_logo_test_1024" android:contentDescription="@string/company_logo" app:layout_constraintBottom_toTopOf="@id/ninety_percents_guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.2" />
    <LinearLayout android:orientation="vertical" android:id="@id/drivers_auth_data_layout" android:layout_width="0.0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/ninety_percents_guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/logo_imageView" app:layout_constraintVertical_bias="0.2">
        <TextView android:gravity="center_horizontal" android:id="@id/step_nine_hint" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/step_nine_hint" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/step_eight_driver_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/step_nine_driver_id" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/step_eight_driver_auth_pass" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/step_nine_auth_pass" />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/ninety_percents_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.92" />
    <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/white" android:id="@id/registration_button_end_registration" android:background="@drawable/share_background_without_round_corners" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/button_close_registration" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ninety_percents_guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>
